Sun Oct 21 19:46:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man_getopt): Fix reversed handling of -f and -k in the
	  "incompatible options" message.

Sun Oct 21 19:43:27 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (CFLAGS): Add -Wformat-security.
	* src/man.c (man_getopt): Use %s as the format string for the
	  "incompatible options" message since the message itself is not a
	  string literal. (This is only a security problem in the presence
	  of hostile translators.)

Sun Oct 21 17:59:13 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (SED_ARGS): Move to ...
	* man/replace.sin: ... here.
	* man/Rules.man (.man1.1, .man5.5, .man8.8): Use replace.sed to
	  shorten build output.
	* configure.ac (AC_CONFIG_FILES): Generate man/replace.sed from
	  man/replace.sin.
	* .bzrignore: Ignore man/replace.sed.

Sun Oct 21 13:38:09 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): If there is no content, that
	  might just be because the key was already freed while purging an
	  earlier multi key, so skip to the next key rather than breaking
	  out of the loop.

Sun Oct 21 13:33:38 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Check for gdbm_exists in DBLIBS as well as LIBS.
	  Remove unused gdbm_setopt check.

Sun Oct 21 01:25:00 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AC_INIT): Pass a BUG-REPORT argument.

Sat Oct 20 18:27:13 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/xmalloc.c (xstrdup): Explicitly tolerate a NULL
	  argument, returning NULL in that case. (Also sent to Gnulib
	  upstream.)
	* gnulib/lib/xmalloc.patch: Add, with the above change in patch
	  format.
	* autogen.sh: Apply xmalloc.patch after updating Gnulib.

Sat Oct 20 18:20:07 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib/lib/asnprintf.c, gnulib/lib/asprintf.c,
	  gnulib/lib/float+.h, gnulib/lib/float_.h,