@@ -26,6 +26,7 @@ gnulib/lib/sys
 gnulib/lib/unistd.h
 gnulib/lib/wchar.h
 gnulib/lib/wctype.h
+gnulib/po
 include/*.h
 intl/Makefile
 intl/charset.alias
