@@ -1,3 +1,14 @@
+Sun Oct 21 21:12:46 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* gnulib: Import .po files (--po-base=gnulib/po --po-domain=man-db).
+	* configure.ac (AC_CONFIG_FILES): Generate gnulib/po/Makefile.in.
+	* Makefile.am (SUBDIRS): Build gnulib/po.
+	* .bzrignore: Ignore gnulib/po. This is contrary to our usual
+	  practice, since this is generated by autogen.sh; but gnulib-tool
+	  gives us full .po files which are then stripped down to just the
+	  parts of Gnulib we use by make, so adding them to bzr is
+	  inconvenient.
+
 Sun Oct 21 19:46:26 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (man_getopt): Fix reversed handling of -f and -k in the
